Fix padding, width, alignment and margins

--- a/css/main.css
+++ b/css/main.css
@@ -24,31 +24,33 @@ body {
 
 .banner-content {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: space-between;
   position: absolute;
   width: 100%;
-  left: 47%;
-  transform: translateX(-50%);
-  top: .25em;
-  max-width: 37em;
-  max-height: 500px;
-  height: 90%;
-  overflow: hidden;
-  padding-bottom: 1em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  max-width: 45em;
+  padding: 0 1em;
 }
 
 .img-flex {
   width: 100%;
   display: block;
-  padding-left: .5em;
+}
+
+.img-container {
+  padding-right: 1em;
   min-width: 14em;
+  max-width: 14em;
   padding-bottom: 3.5em;
 }
 
 .text {
-  padding-left: 2em;
-  padding-top: 1.5em;
+  padding-left: 0;
+  padding-top: 0;
+  width: 60%;
 }
 
 h2 {
@@ -58,27 +60,33 @@ h2 {
   display: inline;
 }
 
+.title {
+  max-width: 6em;
+}
+
 p {
   font-size: 1.5rem;
   font-weight: normal;
   font-family: Roboto, sans-serif;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   margin-top: .5rem;
 }
 
 .btn {
-  font-size: 1.5rem;
+  display: inline-block;
+  font-size: 1.125rem;
   background-color: #333;
   color: #fff;
-  border: 1px solid #333;
+  border: 3px solid #333;
   border-radius: 8px;
-  padding: .75em;
+  padding: .4em .75em .5em;
   text-decoration: none;
   text-align: center;
 }
 
 .btn-big {
   font-family: Roboto, sans-serif;
+  font-size: 1.5rem;
 }
 
 .btn:hover {
